styles.css
html {
    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

/* @font-face {
    font-family: "Libre Franklin";
    src: url(fonts/Libre_Franklin/LibreFranklin-VariableFont_wght.ttf);
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Libre Franklin";
    src: url(fonts/Libre_Franklin/LibreFranklin-Italic-VariableFont_wght.ttf);
    font-weight: normal;
    font-style: italic;
} */

@font-face {
    font-family: "Inter";
    src: url(fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
    font-style: normal;
}

@font-face {
    font-family: "Inter";
    src: url(fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
    font-style: italic;
}

body {
    font-family: "Inter", sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 1.5;
}

/* styles the hero image section */
.hero-img-container {
    width: 100%;
    background-color: #cab1aa;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 30px;

    background-image: url(imgs/close-up-wool-texture-design.jpg);
    background-size: cover;
}

.logo-container {
    width: 100%;
    display: flex;
    margin: 40px 0 auto 0;
    background-color: #00000077;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.logo-container__img {
    max-width: 30vw;
    max-height: 30vw;
    filter: invert() brightness(90%);
}

.logo-container__text {
    color: #e5e5e5;
    font-size: 6rem;
    font-weight: 100;
}

.hero-img-container__img-credit {
    color: #e5e5e5;
    width: 100%;
    text-align: right;
    font-size: .5rem;
    font-weight: 700;
    
}

.hero-img-container__img-credit > a {
    color: #e5e5e5;
}

/* styles the main text section */
.main-text {
    background-color: #f3f3f3;
    padding: 20px 30px;
}

/* styles the form section */
.form  {
    width: 100%;
    padding: 20px 0 20px 30px;
    box-shadow: 10px 5px 10px #81818148;
}

.form__label {
    font-weight: 700;
    color: #3b3b3b;
}

.form > div {
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
} 

.form input {
    width: 75%;
    line-height: 2.5rem;
    border: 1px solid #d4d4d4;
    border-radius: 4px;
}

form input:focus {
    outline: 1px solid #4b4bd8;
    box-shadow: 3px 3px 5px #3b3b3b48;
}

input:user-valid {
    border-color: green;
}

input:user-invalid,
form .error {
    border-color: red;
}

.matching-error {
    font-weight: 700;
    font-size: .8rem;
    color: red;
}

 /* styles the submit button section */
.btn-container {
    width: 100%;
    padding: 10px 0 20px 30px;
}

.btn-container__button {
    padding: 15px 50px;
    margin: 30px 0;
    background-color: #cab1aa;
    border: none;
    border-radius: 4px;
    font-size: 1.2rem;
    font-weight: 900;
    color: #fff;
}

.btn-container__log-in-text {
    font-weight: 700;
}

.btn-container__log-in-link {
    color: #cab1aa;
    text-decoration: none;
}

@media only screen and (min-width: 700px) {
    body {
        display: flex;
        flex-direction: row;
        align-items: stretch;
    }

    main {
        display: flex;
        flex-direction: column; 
        align-items: center;
        box-shadow: 5px 0px 40px 50px white;
    }

    /* styles the hero image section */
    .hero-img-container {
        min-height: 100vh;
    }

    .logo-container {
        margin: 33vh 0 auto 0;
        padding: 10px;
    }

    .logo-container__text {
        font-size: 8rem;
        margin-left: 20px;
        margin-right: 40px;
    }

    .hero-img-container__img-credit {
        text-align: center;
        font-size: .8rem;
    }

    /* styles the main text section */

    .main-text {
        flex-grow: 2;
        padding: 80px 60px;
        display: flex;
        align-items: end;
        box-shadow: 5px -40px 40px 30px #f3f3f3;
    }

    .main-text__text {
        font-size: 2rem;
        font-weight: 300;
    } 

    /* styles the form section */
    .form  {
        padding: 20px 60px;

        flex-grow: 1;
        display: flex;
        flex-wrap: wrap;
    }

    .form > div {
        width: 50%;
        margin-bottom: 0;
    }

    .form input {
        width: 300px;
    }

    /* styles the submit button section */
     .btn-container {
        padding: 10px 0 20px 60px;
        flex-grow: 1.5;
     }
}

